--- a/1.html
+++ b/1.html
@@ -23,5 +23,5 @@
  <br>많이 부족하지만 꾸준히, 조금씩 배워나갈겁니다. 그리고 동시에 이 공간을 통해서 나와 나의 생각들을 공유해보고자 합니다.
  </p>
 
- <br><img src = "미모티콘.png" width = "20%">
+ <br><img src = "mimoji.png" width = "20%">
 </body>
