--- a/3.html
+++ b/3.html
@@ -5,15 +5,25 @@
 
 <body>
   <style>
+    #title{
+      font-size: 45px;
+      text-align: center;
+      padding: 20px;
+    }
     a{
       text-decoration: none;
+      font-size: 20px;
+      color: gray;
+    }
+    h2{
+      padding: 15px;
     }
   </style>
-  <h1><a href = "index.html" style = "color : green"><u>WELLNESS</u></a></h1>
-<ol>
+  <h1><a href = "index.html" style = "color : green"><div id = "title"><u>WELLNESS</div></u></a></h1>
+<ul>
   <li><a href = "1.html">Who am I?</a></li>
   <li><a href = "2.html">Book Report</a></li>
   <li><a href = "3.html">Something</a></li>
-</ol>
+</ul>
 <h2>Something</h2>
 </body>
