--- a/1.html
+++ b/1.html
@@ -5,21 +5,36 @@
 
 <body>
   <style>
+    #title{
+      font-size: 45px;
+      text-align: center;
+      padding: 20px;
+    }
     a{
       text-decoration: none;
+      font-size: 20px;
+      color: gray;
+    }
+    h2{
+      padding: 15px;
+    }
+    p{
+      margin-right: 20px;
+      margin-left: 20px;
     }
   </style>
-  <h1><a href = "index.html" style = "color : green"><u>WELLNESS</u></a></h1>
-<ol>
+  <h1><a href = "index.html" style = "color : green"><div id = "title"><u>WELLNESS</u></div></a></h1>
+<ul>
   <li><a href = "1.html">Who am I?</a></li>
   <li><a href = "2.html">Book Report</a></li>
-  <li><a href = "3.html">something</a></li>
-</ol>
+  <li><a href = "3.html">Something</a></li>
+</ul>
 <h2>Who am I?</h2>
- <p>2022년 발령받은 신규교사입니다. 강화도로 오게 되었지만 나름대로의 만족스러운 생활을 하고 있습니다. 
-  새내기지만서도 나름 교육자의 입장으로서, 새로운 무언가를 배우고 성취해내는 것에 즐거움을 느낍니다. 운동, 맛집 탐방, 독서 등이 최근의 관심사입니다. 
-  아, 그리고 코딩에도 흥미가 생겨 열심히 걸음마를 떼고 있는 중인데, 항상 무언가를 할 때 결과물을 얻어야 직성이 풀리는 성격이기에 나만의 웹사이트 만들기를 시도해보고 있습니다.
-  많이 부족하지만 꾸준히, 조금씩 배워나갈겁니다. 그리고 동시에 이 공간을 통해서 나와 나의 생각들을 공유해보고자 합니다.
+ <p>2022년 발령받은 신규교사입니다. 강화도로 오게 되었지만 나름대로의 만족스러운 생활을 하고 있습니다.
+   새내기지만서도 나름 교육자의 입장으로서, 새로운 무언가를 배우고 성취해내는 것에 즐거움을 느낍니다.
+   운동, 맛집 탐방, 독서 등이 최근의 관심사입니다. 아, 그리고 코딩에도 흥미가 생겨 열심히 걸음마를 떼고 있는 중인데,
+     항상 무언가를 할 때 결과물을 얻어야 직성이 풀리는 성격이기에 나만의 웹사이트 만들기를 시도해보고 있습니다.
+     많이 부족하지만 꾸준히, 조금씩 배워나갈겁니다. 그리고 동시에 이 공간을 통해서 나와 나의 생각들을 공유해보고자 합니다.
  </p>
 
  <br><img src = "mimoji.png" width = "20%">
