--- a/1.html
+++ b/1.html
@@ -10,6 +10,9 @@
       text-align: center;
       padding: 20px;
     }
+    #my_img{
+      margin-left: 180px;
+    }
     a{
       text-decoration: none;
       font-size: 20px;
@@ -19,7 +22,7 @@
       padding: 15px;
     }
     p{
-      margin-right: 20px;
+      margin-right: 500px;
       margin-left: 20px;
     }
   </style>
@@ -37,5 +40,5 @@
      많이 부족하지만 꾸준히, 조금씩 배워나갈겁니다. 그리고 동시에 이 공간을 통해서 나와 나의 생각들을 공유해보고자 합니다.
  </p>
 
- <br><img src = "mimoji.png" width = "20%">
+ <br><img src = "mimoji.png" width = "20%" id = "my_img">
 </body>
