--- a/index.html
+++ b/index.html
@@ -6,15 +6,36 @@
 <body>
 
 <style>
+  body{
+    margin: 0;
+  }
   #title{
     font-size: 45px;
     text-align: center;
+    padding: 30px;
+    border-bottom: 2px solid green;
+  }
+  h1{
+    margin: 0;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns: 240px 1fr;
+  }
+    #grid ul{
+      border-right: 2px solid green;
+      width: 150px;
+      margin: 0;
+      padding: 30px;
+    }
+  #article{
     padding: 20px;
   }
   a{
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
     color: gray;
+    margin-left: 10px;
   }
   h2{
     padding: 15px;
@@ -23,10 +44,12 @@
 <!--
 기능하지 않게 하는 코드
 -->
-  <h1><a href = "index.html" style = "color : green"><div id = "title"><u>WELLNESS</div></u></a></h1>
-<ul>
-  <li><a href = "1.html">Who am I?</a></li>
-  <li><a href = "2.html">Book Report</a></li>
-  <li><a href = "3.html">Something</a></li>
-</ul>
+  <h1><a href = "index.html" style = "color : green"><div id = "title">WELLNESS</div></a></h1>
+<div id = "grid">
+  <ul>
+    <li><a href = "1.html">Who am I?</a></li>
+    <li><a href = "2.html">Book Report</a></li>
+    <li><a href = "3.html">Something</a></li>
+  </ul>
+</div>
 </body>
