--- a/1.html
+++ b/1.html
@@ -1,6 +1,15 @@
 <head>
 <title>Bokwell__WEB</title>
 <meta charset = "UTF-8">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ7E194BTK"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-XJ7E194BTK');
+</script>
 </head>
 
 <body>
@@ -44,7 +53,7 @@
       margin-right: 25px;
     }
     img{
-      margin-left: 400px;
+      margin-left: 300px;
     }
   </style>
   <h1><a href = "index.html" style = "color : green"><div id = "title">WELLNESS</div></a></h1>
@@ -62,8 +71,28 @@
            항상 무언가를 할 때 결과물을 얻어야 직성이 풀리는 성격이기에 나만의 웹사이트 만들기를 시도해보고 있습니다.
            많이 부족하지만 꾸준히, 조금씩 배워나갈겁니다. 그리고 동시에 이 공간을 통해서 나와 나의 생각들을 공유해보고자 합니다.
        </p>
+       <br><img src = "mimoji.png" width = "20%" id = "my_img">
+       <p>
+                 <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://wellness-2.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      </p>
     <div>
 </div>
-
- <br><img src = "mimoji.png" width = "20%" id = "my_img">
 </body>
