--- a/2.html
+++ b/2.html
@@ -1,6 +1,15 @@
 <head>
 <title>Bokwell__WEB</title>
 <meta charset = "UTF-8">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ7E194BTK"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-XJ7E194BTK');
+</script>
 </head>
 
 <body>
