--- a/1.html
+++ b/1.html
@@ -14,56 +14,71 @@ gtag('config', 'G-XJ7E194BTK');
 
 <body>
   <style>
-    body{
-      margin: 0;
+    section{
+      text-align:center;
     }
     #title{
-      font-size: 45px;
-      text-align: center;
-      padding: 30px;
-      border-bottom: 2px solid green;
+      font-size:3rem;
+      text-decoration:none;
+      display:inline-block;
     }
-    h1{
-      margin: 0;
+    div{
+      font-size:1.5rem;
+      text-align:center;
     }
-    #grid{
-      display: grid;
-      grid-template-columns: 240px 1fr;
+    div>a{
+      text-decoration:none;
+      color:black;
+      display:inline-block;
+      width:150px;
+      transition: background-color 0.7s, font-size 0.15s;
     }
-      #grid ul{
-        border-right: 2px solid green;
-        width: 150px;
-        margin: 0;
-        padding: 30px;
-      }
+    div>a:hover{
+      background-color:rgba(0,255,0,0.5);
+      font-size: 1.7rem;
+    }
+    nav{
+      display:inline-block;
+    }
     #article h2{
       padding: 15px;
       font-size: 30px;
     }
-    a{
-      text-decoration: none;
-      font-size: 25px;
-      color: gray;
-      margin-left: 10px;
-    }
     h2{
       padding: 15px;
     }
-    p{
-      margin-right: 25px;
+    div p{
+      font-size: 20px;
+      margin: 25px;
     }
     img{
-      margin-left: 300px;
+      text-align:center;
     }
   </style>
-  <h1><a href = "index.html" style = "color : green"><div id = "title">WELLNESS</div></a></h1>
-<div id = "grid">
-  <ul>
-    <li><a href = "1.html">Who am I?</a></li>
-    <li><a href = "2.html">Book Report</a></li>
-    <li><a href = "3.html">Something</a></li>
-  </ul>
+  <section>
+    &nbsp;
+    <h1><a href = "index.html" style = "color : green"><div id = "title">WELLNESS</div></a></h1>
+    &nbsp;
+  </section>
+  <div>
+    <nav>
+      |
+    </nav>
+      <a href = "1.html">Who am I?</a>
+    <nav>
+      |
+    </nav>
+      <a href = "2.html">Book Report</a>
+    <nav>
+      |
+    </nav>
+      <a href = "3.html">Something</a>
+    <nav>
+      |
+    </nav>
     <div id = "article">
+      &nbsp;
+      &nbsp;
       <h2>Who am I?</h2>
        <p>2022년 발령받은 신규교사입니다. 강화도로 오게 되었지만 나름대로의 만족스러운 생활을 하고 있습니다.
          새내기지만서도 나름 교육자의 입장으로서, 새로운 무언가를 배우고 성취해내는 것에 즐거움을 느낍니다.
@@ -72,6 +87,7 @@ gtag('config', 'G-XJ7E194BTK');
            많이 부족하지만 꾸준히, 조금씩 배워나갈겁니다. 그리고 동시에 이 공간을 통해서 나와 나의 생각들을 공유해보고자 합니다.
        </p>
        <br><img src = "mimoji.png" width = "20%" id = "my_img">
+    </div>
        <p>
                  <div id="disqus_thread"></div>
         <script>
