--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ gtag('config', 'G-XJ7E194BTK');
 </head>
 <body>
 
+<!--
 <style>
   body{
     margin: 0;
@@ -29,12 +30,10 @@ gtag('config', 'G-XJ7E194BTK');
   #grid{
     display: grid;
     grid-template-columns: 240px 1fr;
-  }
-    #grid ul{
-      border-right: 2px solid green;
-      width: 150px;
-      margin: 0;
-      padding: 30px;
+    border-right: 2px solid green;
+    width: 240px;
+    margin: 0;
+
     }
   #article{
     padding: 20px;
@@ -42,22 +41,70 @@ gtag('config', 'G-XJ7E194BTK');
   a{
     text-decoration: none;
     font-size: 25px;
-    color: gray;
+    color: black;
     margin-left: 10px;
+    background-color: rgba(0,255,0,0.5);
+    height: 80px;
+    line-height: 80px;
+    text-weight: bold;
+    text-align: center;
   }
   h2{
     padding: 15px;
   }
 </style>
-<!--
-기능하지 않게 하는 코드
 -->
+<style>
+  section{
+    text-align:center;
+  }
+  #title{
+    font-size:3rem;
+    text-decoration:none;
+    display:inline-block;
+  }
+  div{
+    font-size:1.5rem;
+    text-align:center;
+  }
+  div>a{
+    text-decoration:none;
+    color:black;
+    display:inline-block;
+    width:150px;
+    transition: background-color 0.7s, font-size 0.15s;
+  }
+  div>a:hover{
+    background-color:rgba(0,255,0,0.5);
+    font-size: 1.7rem;
+  }
+  nav{
+    display:inline-block;
+  }
+</style>
+<section>
+  &nbsp;
   <h1><a href = "index.html" style = "color : green"><div id = "title">WELLNESS</div></a></h1>
+  &nbsp;
+</section>
+<!--
 <div id = "grid">
-  <ul>
-    <li><a href = "1.html">Who am I?</a></li>
-    <li><a href = "2.html">Book Report</a></li>
-    <li><a href = "3.html">Something</a></li>
-  </ul>
+-->
+<div>
+  <nav>
+    |
+  </nav>
+    <a href = "1.html">Who am I?</a>
+  <nav>
+    |
+  </nav>
+    <a href = "2.html">Book Report</a>
+  <nav>
+    |
+  </nav>
+    <a href = "3.html">Something</a>
+  <nav>
+    |
+  </nav>
 </div>
 </body>
