--- a/3.html
+++ b/3.html
@@ -71,5 +71,14 @@ gtag('config', 'G-XJ7E194BTK');
     &nbsp;
     <h2>Something</h2>
   </div>
+  <img src="https://picsum.photos/450/400" alt="">
+  <img src="https://picsum.photos/300/350" alt="">
+  <img src="https://picsum.photos/540/250" alt="">
+  <br>
+  <article oncontextmenu="return false">
+  <audio controlslist="nodownload" preload="none" autoplay loop>
+    <source src="music3.mp3">
+  </audio>
+  </article>
 </div>
 </body>
