--- a/3.html
+++ b/3.html
@@ -77,7 +77,7 @@ gtag('config', 'G-XJ7E194BTK');
   <br>
   <article oncontextmenu="return false">
   <audio controlslist="nodownload" preload="none" autoplay loop>
-    <source src="music3.mp3">
+    <source src="https://docs.google.com/uc?export=open&id=1npy1274mP6eR03sFnFlmqgYonlzCEZ02" type='audio/mp3'>
   </audio>
   </article>
 </div>
