--- a/3.html
+++ b/3.html
@@ -76,8 +76,8 @@ gtag('config', 'G-XJ7E194BTK');
   <img src="https://picsum.photos/540/250" alt="">
   <br>
   <article oncontextmenu="return false">
-  <audio controlslist="nodownload" preload="none" autoplay loop>
-    <source src="https://docs.google.com/uc?export=open&id=1npy1274mP6eR03sFnFlmqgYonlzCEZ02" type='audio/mp3'>
+  <audio controls autoplay>
+    <source src="nusic3.mp3" type='audio/mp3'>
   </audio>
   </article>
 </div>
