--- a/3.html
+++ b/3.html
@@ -43,6 +43,10 @@ gtag('config', 'G-XJ7E194BTK');
       padding: 15px;
       font-size: 30px;
     }
+    audio {
+  display: block;
+  margin: 20px auto;
+}
   </style>
   <section>
     &nbsp;
@@ -70,14 +74,15 @@ gtag('config', 'G-XJ7E194BTK');
     &nbsp;
     <h2>Something</h2>
   </div>
+  <img src="https://picsum.photos/450/400" alt="">
+  <img src="https://picsum.photos/300/350" alt="">
+  <img src="https://picsum.photos/540/250" alt="">
+    <br>
+    <br>
   <article oncontextmenu="return false">
   <audio controls loop preload="auto">
     <source src="https://drive.google.com/uc?export=download&id=1b8AZpYgeqdZQXIurE4MtOdnndtnf5UbG" type='audio/mp3'>
   </audio>
   </article>
-    <br>
-  <img src="https://picsum.photos/450/400" alt="">
-  <img src="https://picsum.photos/300/350" alt="">
-  <img src="https://picsum.photos/540/250" alt="">
   </div>
 </body>
