--- a/2.html
+++ b/2.html
@@ -10,6 +10,7 @@ gtag('js', new Date());
 
 gtag('config', 'G-XJ7E194BTK');
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body><style>
@@ -71,6 +72,8 @@ gtag('config', 'G-XJ7E194BTK');
     &nbsp;
     &nbsp;
     <h2>About some books that I read</h2>
+    &nbsp;
+    <button>write</button>
   </div>
 </div>
 </body>
