--- a/3.html
+++ b/3.html
@@ -61,7 +61,7 @@ gtag('config', 'G-XJ7E194BTK');
     <nav>
       |
     </nav>
-      <a href = "2.html">Book Report</a>
+      <a href = "https://www.notion.so/2c0fdb7211ba49119961cc61939928f4">Book Report</a>
     <nav>
       |
     </nav>
@@ -81,7 +81,7 @@ gtag('config', 'G-XJ7E194BTK');
     <br>
   <article oncontextmenu="return false">
   <audio controls loop preload="auto">
-    <source src="https://drive.google.com/uc?export=download&id=1b8AZpYgeqdZQXIurE4MtOdnndtnf5UbG" type='audio/mp3'>
+    <source src="https://drive.google.com/uc?export=download&id=1MfCKd5Lz7Fx4KZlS-CV0zVGqL40Tcjnj" type='audio/mp3'>
   </audio>
   </article>
   </div>
