--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ gtag('config', 'G-XJ7E194BTK');
   nav{
     display:inline-block;
   }
+
 </style>
 <section>
   &nbsp;
@@ -97,7 +98,7 @@ gtag('config', 'G-XJ7E194BTK');
   <nav>
     |
   </nav>
-    <a href = "2.html">Book Report</a>
+    <a href = "https://www.notion.so/2c0fdb7211ba49119961cc61939928f4">Book Report</a>
   <nav>
     |
   </nav>
