--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ gtag('config', 'G-XJ7E194BTK');
   <nav>
     |
   </nav>
-    <a href = "https://www.notion.so/2c0fdb7211ba49119961cc61939928f4">Book Report</a>
+    <a href = "https://polyester-thrush-b77.notion.site/2c0fdb7211ba49119961cc61939928f4">Book Report</a>
   <nav>
     |
   </nav>
