--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ gtag('config', 'G-XJ7E194BTK');
   <nav>
     |
   </nav>
-    <a href = "3.html">Something</a>
+    <a href = "https://polyester-thrush-b77.notion.site/f1e6478b39a441c78ab5991e9d800767">Daily Mood</a>
   <nav>
     |
   </nav>
