--- a/1.html
+++ b/1.html
@@ -75,6 +75,11 @@ gtag('config', 'G-XJ7E194BTK');
     <nav>
       |
     </nav>
+      <a href = "https://polyester-thrush-b77.notion.site/28081f913c484d5fade4d5b270159c7c">News Scrap</a>
+    <nav>
+      |
+    </nav>
+
     <div id = "article">
       &nbsp;
       &nbsp;
