--- a/index.html
+++ b/index.html
@@ -106,5 +106,9 @@ gtag('config', 'G-XJ7E194BTK');
   <nav>
     |
   </nav>
+    <a href = "https://polyester-thrush-b77.notion.site/28081f913c484d5fade4d5b270159c7c">News Scrap</a>
+  <nav>
+    |
+  </nav>
 </div>
 </body>
