--- a/1.html
+++ b/1.html
@@ -75,7 +75,7 @@ gtag('config', 'G-XJ7E194BTK');
     <nav>
       |
     </nav>
-      <a href = "https://polyester-thrush-b77.notion.site/28081f913c484d5fade4d5b270159c7c">News Scrap</a>
+      <a href = "https://polyester-thrush-b77.notion.site/90bc27e480ed4e9eacfd187bbf191756?v=8d47cdc2cf434258815cb2cbc3443642">News Scrap</a>
     <nav>
       |
     </nav>
