--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@ gtag('js', new Date());
 gtag('config', 'G-XJ7E194BTK');
 </script>
 </head>
- 
+
 <body>
   <style>
     section{
@@ -73,9 +73,9 @@ gtag('config', 'G-XJ7E194BTK');
     </nav>
       <a href = "https://polyester-thrush-b77.notion.site/f1e6478b39a441c78ab5991e9d800767">Daily Mood</a>
     <nav>
-      |
+      | 
     </nav>
-      <a href = "https://polyester-thrush-b77.notion.site/90bc27e480ed4e9eacfd187bbf191756?v=8d47cdc2cf434258815cb2cbc3443642">News Scrap</a>
+      <a href = "https://www.notion.so/1b3463640fe146d3b5c53d6b2fb8df84?v=5b1554708df1437b8938d23b15ab2a2c">News Scrap</a>
     <nav>
       |
     </nav>
