--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ gtag('config', 'G-XJ7E194BTK');
   <nav>
     | 
   </nav>
-    <a href = "https://www.notion.so/1b3463640fe146d3b5c53d6b2fb8df84?v=5b1554708df1437b8938d23b15ab2a2c">News Scrap</a>
+    <a href = "https://polyester-thrush-b77.notion.site/1b3463640fe146d3b5c53d6b2fb8df84?v=5b1554708df1437b8938d23b15ab2a2c">News Scrap</a>
   <nav>
     |
   </nav>
 
-</div>
+</div> 
 </body>
